k8s/model-3d-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-3d-catalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-3d-catalog
  template:
    metadata:
      labels:
        app: model-3d-catalog
    spec:
      containers:
        - image: klemiba/model-3d-catalog:2020-12-19-23-41-48
          name: model-3d-catalog
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: model-3d-catalog
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: model-3d-catalog
