k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /model-3d-catalog(/|$)(.*) #/model-3d-catalog/v1/models
            backend:
              serviceName: model-3d-catalog
              servicePort: 8080
          - path: /model-3d-parser(/|$)(.*) #/model-3d-catalog/v1/models
            backend:
              serviceName: model-3d-parser
              servicePort: 8080
          - path: /model-3d-comments(/|$)(.*) #/model-3d-catalog/v1/models
            backend:
              serviceName: model-3d-comments
              servicePort: 8080
